# Lagrange

./: CMakeLists.txt  README.md  main.cpp
include/: Constants.hpp  Function.hpp  NumericalMethod.hpp  Util.hpp
include/NumericalMethods/: Bisection.hpp  FixedPoint.hpp  Newton.hpp  Secant.hpp
src/: Function.cpp  Util.cpp
src/NumericalMethods/: Bisection.cpp  FixedPoint.cpp  Newton.cpp  Secant.cpp
